protocols/tests/adders/adder_d1/busy_wait_fail.out
error: The two expressions did not evaluate to the same value
   ┌─ adders/adder_d1/busy_wait.prot:21:15
   │
21 │     assert_eq(s, DUT.s);
   │               ^^^^^^^^ LHS Value: 999, RHS Value: 3

Trace 0 execution failed.
